test_files/unexpected-input.stderr
error: custom attribute panicked
 --> test_files/unexpected-input.rs:7:1
  |
7 | #[archive_impl(blah)]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Unsupported argument `blah`
